--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -12,14 +12,14 @@
   
   .about img {
     width: auto;
-    height: 50%;
+    height: 60vh;
     border-radius: 20px 0px 0px 20px;
     box-shadow: #01356e 5px 5px 5px 5px;
   }
   
   .presentation {
     width: auto;
-    height: 50%;
+    height: 60vh;
     padding: 0 5%;
     background-color: #fff;
     border-radius: 0px 20px 20px 0px;
@@ -41,167 +41,46 @@
     font-size: auto;
     align-items: center;
     justify-content: center;
+    font-size: 1vw;
   }
 
-/*desktop*/
-@media only screen and (max-height: 835px) {
-    .about img {
-      height: 55vh;
-    }
-
-    .presentation {
-      height: 55vh;
-    }
-
-    .presentation p {
-      font-size: 15px;
-    }
-}
-
-@media only screen and (max-width: 1024px) {
-      .about {
-        padding: 5%;
-      }
-
-      .about img {
-        height: 60%;
-      }
-
-      .presentation {
-        height: 60%;
-      }
-  }
-/*tablet*/
-@media only screen and (width: 1024px) and (height: 1366px) {
-  .about {
-    display: block;
-    height: 80%;
-  }
-
-  .about img {
-    width: 60%;
-    margin: 0 20% 10px 20%;
-    height: auto;
-    border-radius: 20px;
-  }
-
-  .presentation {
-    border-radius: 20px;
-    max-height: 55%;
-  }
-
-  .presentation h1 {
-    padding-top: 5px;
-    text-align: center;
-  }
-
-  .presentation p {
-    font-size: 25px;
-  }
-}
-
-@media only screen and (max-width: 950px) and (min-height: 500px) {
+@media only screen and (orientation: portrait) {
     .about {
-      display: block;
-      height: 80%;
+      flex-direction: column;
+      height: 95vh;
     }
 
     .about img {
-      width: 60%;
-      margin: 0 20% 10px 20%;
+      width: 40vw;
+      margin: 2vh;
       height: auto;
-      border-radius: 20px;
+      border-radius: 4vw;
     }
 
     .presentation {
-      border-radius: 20px;
-      max-height: 55%;
+      border-radius: 4vw;
+      height: 60vh;
     }
 
     .presentation h1 {
-      padding-top: 5px;
+      padding-top: 1vw;
       text-align: center;
+      font-size: 3em;
     }
 
     .presentation p {
-      font-size: 20px;
+      font-size: 2.5em;
+      overflow-y: scroll;
     }
 
   }
-@media only screen and (max-width: 780px) {
-    .presentation p {
-      font-size: 16px;
+
+  @media only screen and (orientation: landscape) and (min-height: 60vw) {
+    .about img {
+      height: 40vh;
+    }
+
+    .presentation {
+      height: 40vh;
     }
   }
-@media only screen and (max-height: 640px) {
-  .presentation p {
-    font-size: 13px;
-  }
-}
-/*mobile*/
-@media only screen and (max-height: 500px) {
-  .about {
-    padding: 0 5% 5% 5%;
-  }
-  .about img {
-    height: 70%;
-  }
-  .presentation {
-    height: 70%;
-  }
-  .presentation p {
-    font-size: 13px;
-  }
-  .presentation h1 {
-    height: 5%;
-    font-size: 20px;
-  }
-}
-
-@media only screen and (max-height: 400px) {
-  .presentation p {
-    font-size: 12px;
-  }
-}
-
-@media only screen and (max-height: 400px) and (max-width: 860px) {
-  .presentation p {
-    font-size: 11px;
-  }
-}
-
-@media only screen and (max-height: 420px) and (max-width: 740px) {
-  .presentation p {
-    font-size: 9.5px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .presentation {
-    min-height: 57vh;
-  }
-}
-
-@media only screen and (max-width: 500px) and (max-height:870px) {
-  .presentation p {
-    font-size: 15px;
-  }
-}
-
-@media only screen and (max-width: 500px) and (max-height:790px) {
-  .presentation p {
-    font-size: 14px;
-  }
-}
-
-@media only screen and (max-width: 500px) and (max-height:730px) {
-  .presentation p {
-    font-size: 13px;
-  }
-}
-@media only screen and (max-width: 500px) and (max-height:650px) {
-  .presentation h1 {
-    font-size: 20px;
-    height: 5%;
-  }
-}
